# jira-get-field

./: README.md  build.sh  pyproject.toml
src/jira_actions_lock/: JiraClient.py  __init__.py  __main__.py  helpers.py
tests/: test_jira_actions_lock.py
